# cramjam-cli

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
src/: main.rs
tests/: test_cli.py
