[package]
name = "cramjam-cli"
version = "0.2.0-rc3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

[dependencies]
clap = { version = "^4.2", features = ["derive"] }
bytesize = "^1"
libcramjam = { version = "^0.8" }

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
opt-level = 3
